# random_algs

./: README.md
code_forces/watermelon/: PROBLEM.md
competitive_programing/code_forces/watermelon/: sol.c
competitive_programing/code_forces/word_capitalization/: sol.c
competitive_programing/leetcode/problem_100/: Sol.java
competitive_programing/leetcode/problem_112/: sol.cpp
competitive_programing/leetcode/problem_1290/: sol.cpp
competitive_programing/leetcode/problem_173/: Sol.java
competitive_programing/leetcode/problem_190/: sol.cpp
eight_queens/: python_solution.py
haskell_stuff/haskell_learn/: Notes.md  README.md
leetcode/problem_125/: sol.py
leetcode/problem_128/: Sol.java
leetcode/problem_133/: Sol.java
leetcode/problem_146/: Sol.java
leetcode/problem_200/: Sol.java
leetcode/problem_929/: Sol.cpp
low_level/OS_things/kernel_dev_learning/: CMakeLists.txt  README.md
low_level/OS_things/kernel_dev_learning/src/kernel/: kernel.c
opengl/learn/: README.md
opengl/learn/part_1/src/: CMakeLists.txt  main.cpp
opengl/learn/part_1/src/classes/: Shader.cpp  Shader.hpp
opengl/learn/part_1/src/shaders/: fragment_shader_multicolor_example.glsl  fragment_shader_texture_example.glsl  vertex_shader.glsl  vertex_shader_multicolor_example.glsl  vertex_shader_mvp_example.glsl  vertex_shader_texture_example.glsl
project_euler/problem_1/: PROBLEM.md  sol.py
project_euler/problem_2/: sol.py
project_euler/problem_3/: README.md  sol.py
project_euler/problem_4/: sol.py
python_first_attempt_raycasting/: README.md  main.py
(+23 files in other folders)
